# ensenso

./: .gitignore  CMakeLists.txt  README.md  _travis.yml  package.xml
clouds/: .1fdd04cafcb1cb1073ee51e489550798e7d20bf8.cam
ensenso/: .gitignore  CMakeLists.txt  CMakeLists.txt~  ensenso_calib_params.json  package.xml  pcdreader.cpp  test_pcd.pcd
ensenso/include/: jsonToTuple.hdvp  nxLibConstants.h  nxLibGetPose.hdvp  nxLibGetRectifiedCameraSetup.hdvp  nxLibSetPose.hdvp
ensenso/include/ensenso/: boost_sender.h  camera_matrices.h  ensenso_headers.h  pcl_headers.h  savgol.h
ensenso/scripts/: model.lua  prepro.lua
ensenso/src/: boost_sender.cxx  ensenso_bridge.cxx  factory_functions.cxx  pathfinder.cxx  pcdreader.cpp  pcdreader.cxx  savgol.cxx
ensenso_detect/: CMakeLists.txt  README.md  package.xml  requirements.txt
ensenso_detect/include/ensenso_detect/: bboxes.h  window_manager.h
ensenso_detect/manikin/: Untitled.ipynb  Untitled1.ipynb  __init__.py  clean_up.sh  cnn_lstm_demo.ipynb  deep_resnet.ipynb  demo.ipynb  labels.json  load.py  main.py  model.py  old_main.py  old_model.py  old_train.py  prepro.ipynb  reinforce.py  resnet.pkl  resnet.pth  resnet_1002  test.py  train.py  train2.py  training_notes.md  yunjey_resnet.ipynb
ensenso_detect/manikin/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cnn_lstm_demo-checkpoint.ipynb  prepro-checkpoint.ipynb  yunjey_resnet-checkpoint.ipynb
ensenso_detect/manikin/models156/: resnet_acc=54_iter=200.pkl  resnet_acc=64.pkl  resnet_acc=77%_iter=100.pkl
ensenso_detect/manikin/models225/: resnet.pkl_acc=84_iter=200.pth  resnet_acc=64_iter=200.pth  resnet_acc=77_iter=1100.pkl  resnet_acc=80_iter=200.pth  resnet_acc=91_iter=20  resnet_acc=97_iter=1000.pkl
ensenso_detect/manikin/models_new/: regressnet_iter50.pkl  resnet_score100.pkl
ensenso_detect/manikin/ununsed/: unused_funcs.py
ensenso_detect/manikin/utils/: __init__.py  bbox_transform.py  crossEntropyStochastic.py  data_manip.py  eyes_boxes.py  face-boxes.py
ensenso_detect/src/: bboxes.cxx  bboxes.py  caltech.py  ensenso_detect.cxx  env.yml  gt_collection.py  load_bboxes.ipynb  main_detect.py  window_manager.cpp
ensenso_detect/src/.ipynb_checkpoints/: load_bboxes-checkpoint.ipynb
ensenso_detect/src/data/: faces_bboxes.txt  left_eyes_bboxes.txt  nose_bboxes.txt  right_eyes_bboxes.txt
ensenso_detect/src/ununsed/: vgg_viewer.py
ensenso_detect/src/utils/: __init__.py  box_utils.py  model.py
ensenso_seg/: CMakeLists.txt  package.xml
ensenso_seg/data/: headnball.ply
ensenso_seg/src/: ensenso_segmentation.cxx  icp.cxx
ensenso_viewer/: CMakeLists.txt  package.xml
ensenso_viewer/include/ensenso_viewer/: .gitignore
ensenso_viewer/src/: ensenso_blob.cxx  ensenso_viewer.cxx  getBlobsContour.cpp
include/ensenso/: boost_sender.h  ensenso_callback_functor.h  ensenso_grabber.h  ensenso_headers.h  ensenso_interface.h  event_frequency.h  grabber.h  pcl_headers.h  savgol.h  visualizer.h
msg/: HeadPose.msg
scripts/: ImageLoader.lua  model.lua  network_arch.md  prepro.lua  train.lua  util.lua
sensors/: package.xml
src/: boost_sender.cxx  ensenso_bridge.cxx  ensenso_correspondence.cxx  ensenso_grabber.cpp  ensenso_interface.cpp  ensenso_segmentation.cxx  ensenso_viewer.cpp  ensenso_viewer.cxx  ensenso_viewer2.cxx  factory_functions.cxx  pathfinder.cxx
