<?xml version="1.0"?>
<package>
  <name>ensenso</name>
  <version>0.0.0</version>
  <description>The ensenso package</description>

  <maintainer email="patlekano@gmail.com">lex</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>