<?xml version="1.0"?>
<package>
  <name>sensors</name>
  <version>0.0.0</version>
  <description>
    My sensors metapackage
  </description>

  <maintainer email="olalekan.ogunmolu@utdallas.edu">Olalekan Ogunmolu</maintainer>
  <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>ensenso</run_depend>
    <run_depend>ensenso_detect</run_depend>
    <run_depend>ensenso_seg</run_depend>
    <run_depend>ensenso_viewer</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
